@@ -1,3 +1,7 @@
+2005-11-10  Pierre Chifflier  <pollux@wzdftpd.net>
+
+	* bugfix: unable to list directory in firefox
+
 2005-11-01  Pierre Chifflier  <pollux@wzdftpd.net>
 
 	* feature: added support for crontab in new config format
